--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Screensy",
+  "name": "__MSG_extName__",
   "description": "__MSG_extDesc__",
   "offline_enabled": true,
   "version": "0.0.11",
