--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "__MSG_extName__",
   "description": "__MSG_extDesc__",
   "offline_enabled": true,
-  "version": "0.0.11",
+  "version": "0.0.2",
   "manifest_version": 2,
   "default_locale": "en",
   "background": {
@@ -10,7 +10,7 @@
     "persistent": false
   },
   "oauth2": {
-      "client_id": "CLIENT_ID",
+      "client_id": "802396293712-f7p06r4lal4bibvqd1fschipsfok4ck1.apps.googleusercontent.com",
       "scopes": [
         "https://www.googleapis.com/auth/drive.appdata",
       "https://www.googleapis.com/auth/drive.file"
